# bonskter-admin-kpi

./: .gitignore  main.py  pyproject.toml
bonksters/: db.sqlite3  manage.py
bonksters/bonksters/: asgi.py  settings.py  urls.py  wsgi.py
bonksters/portal/: admin.py  models.py
bonksters/portal/migrations/: 0001_initial.py
