[project]
name = "bonksters-admin-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.7",
    "dj-database-url>=3.0.1",
    "django>=5.2.5",
    "django-extensions>=4.1",
    "django-jazzmin>=3.0.1",
    "django-storages>=1.14.6",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
